Added Firestore Authentication

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,28 @@
 [versions]
-agp = "8.5.1"
-junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-appcompat = "1.7.0"
-material = "1.12.0"
-activity = "1.10.0"
-constraintlayout = "2.2.0"
+agp = "8.5.1" # Android Gradle Plugin version
+junit = "4.13.2" # JUnit for unit testing
+junitVersion = "1.2.1" # AndroidX JUnit extension
+espressoCore = "3.6.1" # Espresso for UI testing
+appcompat = "1.7.0" # AndroidX AppCompat library
+material = "1.12.0" # Material Design components
+activity = "1.10.0" # Activity support library
+constraintlayout = "2.2.0" # ConstraintLayout library
+volley = "1.2.1" # Volley library for network operations
+mpandroidchart = "v3.1.0" # MPAndroidChart for data visualization
+firebaseBom = "33.8.0" # Firebase BOM version
 
 [libraries]
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+firebase-auth = "com.google.firebase:firebase-auth:23.1.0" # Firebase Authentication library
+firebase-bom = "com.google.firebase:firebase-bom:${versions.firebaseBom}" # Firebase BOM
+junit = { group = "junit", name = "junit", version.ref = "junit" } # JUnit library
+ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" } # AndroidX JUnit extension
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" } # Espresso library
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" } # AppCompat library
+material = { group = "com.google.android.material", name = "material", version.ref = "material" } # Material Design library
+activity = { group = "androidx.activity", name = "activity", version.ref = "activity" } # Activity library
+constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" } # ConstraintLayout library
+volley = { group = "com.android.volley", name = "volley", version.ref = "volley" } # Volley library
+mpandroidchart = { group = "com.github.PhilJay", name = "MPAndroidChart", version.ref = "mpandroidchart" } # MPAndroidChart library
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "agp" }
-
+android-application = { id = "com.android.application", version.ref = "agp" } # Android application plugin
