--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.powerscout">  <!-- Correct package name -->
 
     <application
         android:allowBackup="true"
@@ -12,30 +13,37 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PowerScout"
         tools:targetApi="31">
-        <activity
-            android:name=".RegisterActivity2"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_splash"
-            android:theme="@style/Theme.PowerScout" />
+
+        <!-- SplashActivity is the launcher activity -->
         <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- MainActivity should be the first screen after SplashActivity -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.PowerScout" />
+
+        <!-- Other activities -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".Register1Activity"
+            android:exported="true" />
+
+        <activity
+            android:name=".Register2Activity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
