Reset Password and solved backend issues
Added reset password functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
             android:name=".Register2Activity"
             android:exported="true" />
 
+        <activity android:name=".ResetPasswordActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
