--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,22 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_power"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_power"
         android:supportsRtl="true"
         android:theme="@style/Theme.PowerScout"
         tools:targetApi="31">
+        <activity
+            android:name=".complete_info3"
+            android:exported="false" />
+
+        <activity
+            android:name=".complete_info2"
+            android:exported="false" />
+        <activity
+            android:name=".complete_info1"
+            android:exported="false" />
         <activity
             android:name=".activity_update_info2"
             android:exported="false" />
@@ -52,7 +62,8 @@
             android:exported="true" />
         <activity
             android:name=".Register1Activity"
-            android:exported="true" />
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".Register2Activity"
             android:exported="true" />
