--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.powerscout">
+    package="com.example.powerscout" >
     <!-- Permission to access the internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,16 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_power"
         android:supportsRtl="true"
         android:theme="@style/Theme.PowerScout"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".complete_info3"
-            android:exported="false" />
-
-        <activity
-            android:name=".complete_info2"
+            android:name=".ContactUsActivity"
             android:exported="false" />
         <activity
-            android:name=".complete_info1"
+            android:name=".TermsConditionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FeedbackActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EnergySavingActivity"
             android:exported="false" />
         <activity
             android:name=".complete_info3"
@@ -55,7 +57,7 @@
         <activity
             android:name=".SplashActivity"
             android:exported="true"
-            android:theme="@style/Theme.Design.NoActionBar">
+            android:theme="@style/Theme.Design.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -72,7 +74,7 @@
         <activity
             android:name=".Register1Activity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".Register2Activity"
             android:exported="true" />
