--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.powerscout" >
+    package="com.example.powerscout">
     <!-- Permission to access the internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_power"
         android:supportsRtl="true"
         android:theme="@style/Theme.PowerScout"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".Dashboard"
+            android:exported="false" />
         <activity
             android:name=".ContactUsActivity"
             android:exported="false" />
@@ -57,7 +60,7 @@
         <activity
             android:name=".SplashActivity"
             android:exported="true"
-            android:theme="@style/Theme.Design.NoActionBar" >
+            android:theme="@style/Theme.Design.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
